; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/i2c/extr_mt9v111.c___mt9v111_addr_space_select.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/i2c/extr_mt9v111.c___mt9v111_addr_space_select.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2c_client = type { i32 }
%struct.v4l2_subdev = type { i32 }
%struct.mt9v111_dev = type { i64 }

@MT9V111_R01_ADDR_SPACE = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.i2c_client*, i64)* @__mt9v111_addr_space_select to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__mt9v111_addr_space_select(%struct.i2c_client* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.i2c_client*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.v4l2_subdev*, align 8
  %7 = alloca %struct.mt9v111_dev*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store %struct.i2c_client* %0, %struct.i2c_client** %4, align 8
  store i64 %1, i64* %5, align 8
  %10 = load %struct.i2c_client*, %struct.i2c_client** %4, align 8
  %11 = call %struct.v4l2_subdev* @i2c_get_clientdata(%struct.i2c_client* %10)
  store %struct.v4l2_subdev* %11, %struct.v4l2_subdev** %6, align 8
  %12 = load %struct.v4l2_subdev*, %struct.v4l2_subdev** %6, align 8
  %13 = call %struct.mt9v111_dev* @sd_to_mt9v111(%struct.v4l2_subdev* %12)
  store %struct.mt9v111_dev* %13, %struct.mt9v111_dev** %7, align 8
  %14 = load %struct.mt9v111_dev*, %struct.mt9v111_dev** %7, align 8
  %15 = getelementptr inbounds %struct.mt9v111_dev, %struct.mt9v111_dev* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load i64, i64* %5, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %20

19:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %48

20:                                               ; preds = %2
  %21 = load %struct.i2c_client*, %struct.i2c_client** %4, align 8
  %22 = load i32, i32* @MT9V111_R01_ADDR_SPACE, align 4
  %23 = load i64, i64* %5, align 8
  %24 = call i32 @__mt9v111_write(%struct.i2c_client* %21, i32 %22, i64 %23)
  store i32 %24, i32* %9, align 4
  %25 = load i32, i32* %9, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %29

27:                                               ; preds = %20
  %28 = load i32, i32* %9, align 4
  store i32 %28, i32* %3, align 4
  br label %48

29:                                               ; preds = %20
  %30 = load %struct.i2c_client*, %struct.i2c_client** %4, align 8
  %31 = load i32, i32* @MT9V111_R01_ADDR_SPACE, align 4
  %32 = call i32 @__mt9v111_read(%struct.i2c_client* %30, i32 %31, i64* %8)
  store i32 %32, i32* %9, align 4
  %33 = load i32, i32* %9, align 4
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %37

35:                                               ; preds = %29
  %36 = load i32, i32* %9, align 4
  store i32 %36, i32* %3, align 4
  br label %48

37:                                               ; preds = %29
  %38 = load i64, i64* %8, align 8
  %39 = load i64, i64* %5, align 8
  %40 = icmp ne i64 %38, %39
  br i1 %40, label %41, label %44

41:                                               ; preds = %37
  %42 = load i32, i32* @EINVAL, align 4
  %43 = sub nsw i32 0, %42
  store i32 %43, i32* %3, align 4
  br label %48

44:                                               ; preds = %37
  %45 = load i64, i64* %5, align 8
  %46 = load %struct.mt9v111_dev*, %struct.mt9v111_dev** %7, align 8
  %47 = getelementptr inbounds %struct.mt9v111_dev, %struct.mt9v111_dev* %46, i32 0, i32 0
  store i64 %45, i64* %47, align 8
  store i32 0, i32* %3, align 4
  br label %48

48:                                               ; preds = %44, %41, %35, %27, %19
  %49 = load i32, i32* %3, align 4
  ret i32 %49
}

declare dso_local %struct.v4l2_subdev* @i2c_get_clientdata(%struct.i2c_client*) #1

declare dso_local %struct.mt9v111_dev* @sd_to_mt9v111(%struct.v4l2_subdev*) #1

declare dso_local i32 @__mt9v111_write(%struct.i2c_client*, i32, i64) #1

declare dso_local i32 @__mt9v111_read(%struct.i2c_client*, i32, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
